# CppEasySerDes

./: CMakeLists.txt  EasySerDes.h  EasySerDesBuiltInTypeSupport.h  EasySerDesClassHelper.h  EasySerDesCore.h  EasySerDesJsonHelpers.h  EasySerDesPolymorphicClassHelper.h  EasySerDesStdLibSupport.h  README.md  main.cpp
esd/: BuiltInTypeSupport.h  ClassHelper.h  Context.h  Core.h  CurrentContext.h  DataReader.h  DataWriter.h  JsonHelpers.h  PolymorphicClassHelper.h  PolymorphismHelper.h  StdLibSupport.h
test/: CMakeLists.txt  TestBuiltInLanguageTypes.cpp  TestBuiltInLanguageTypes.h  TestClassHelper.cpp  TestClassHelper.h  TestJsonHelpers.cpp  TestJsonHelpers.h  TestPolymorphicClassHelper.cpp  TestPolymorphicClassHelper.h  TestPolymorphismHelper.cpp  TestPolymorphismHelper.h  TestStdLibrarySupport.cpp
